# budget-stress-tester

./: .gitignore  README.md
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 08803203e4a6_create_users_table.py  26c69b2aa49d_update_user_table_to_add_currency_.py  a19cab814498_initial_tables.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: create_db.py  init_db.py  session.py
backend/app/models/: user.py
backend/app/repositories/: user_repo.py
backend/app/schemas/: auth.py  user.py
docs/: architecture.md  auth_notes.md  backend-file-structure.md  problems.md
